# lyra

./: .dockerignore  .env  .gitignore  .graphqlrc.yml  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  biome.json  cleanup.sh  export-ffmpeg.sh  lyra.yml  package.json  schema.gql  segment.sh  test.sh
client/: .oxfmtrc.json  .oxlintrc.json  codegen.ts  components.json  index.html  package.json  tsconfig.json  vite.config.ts
crates/lyra/: .env  Cargo.toml  schema.gql
crates/lyra-bitsubconvert/: Cargo.toml
crates/lyra-bitsubconvert/src/: lib.rs  main.rs  models.rs
crates/lyra-bitsubconvert/src/ocr/: infer.rs  mod.rs  pool.rs
crates/lyra-bitsubconvert/src/parsers/: mod.rs  pgs.rs  vobsub.rs
crates/lyra-keyframe-extractor/: Cargo.toml
crates/lyra-keyframe-extractor/src/: lib.rs  main.rs
crates/lyra-marker/: Cargo.toml
crates/lyra-marker/src/: detect.rs  fingerprint.rs  generate.rs  lib.rs  main.rs
crates/lyra-metadata-tmdb/: Cargo.toml
crates/lyra-metadata-tmdb/src/: lib.rs
crates/lyra-packager/: Cargo.toml
crates/lyra-packager/src/: binaries.rs  config.rs  ffmpeg.rs  keyframes.rs  lib.rs  main.rs  model.rs  playlist.rs  server.rs  session.rs  session_manager.rs  state.rs  types.rs
crates/lyra-packager/src/profiles/: audio.rs  mod.rs  subtitle.rs  video.rs
crates/lyra-parser/: Cargo.toml
crates/lyra-parser/model/: config.json  tokenizer.json
crates/lyra-parser/src/: infer_numbers.rs  lib.rs  model.rs  pattern.rs  should_ignore_path.rs  util.rs
crates/lyra-parser/src/parser/: edition.rs  ids.rs  mod.rs  season_episode.rs  title.rs  year.rs
crates/lyra-probe/: Cargo.toml  dictionary
crates/lyra-probe/src/: codec_tag.rs  keyframes.rs  lib.rs  paths.rs  probe.rs  types.rs  video_display.rs
crates/lyra-thumbnail/: Cargo.toml
crates/lyra-thumbnail/src/: extract.rs  generate.rs  lib.rs  main.rs
crates/lyra-timeline-preview/: Cargo.toml  NOTES.md
crates/lyra-timeline-preview/src/: extract.rs  generate.rs  lib.rs  main.rs
crates/lyra/src/: activity.rs  api.rs  assets.rs  auth.rs  backup.rs  cleanup.rs  collections.rs  config.rs  content_update.rs  error.rs  ffmpeg.rs  file_analysis.rs  ids.rs  job_block.rs  json_encoding.rs  main.rs  matcher.rs  proxy.rs  reactivity.rs  scanner.rs  segmenter.rs  signer.rs  subtitle_files.rs  subtitles.rs  tmdb.rs  watch_session.rs
crates/lyra/src/assets/: job_cleanup.rs  job_download.rs  job_thumbhash.rs  mod.rs  proxy.rs  runtime.rs  service.rs  storage.rs  worker.rs
crates/lyra/src/auth/: error.rs  extractors.rs  guards.rs  libraries.rs  login.rs  mod.rs  sessions.rs
crates/lyra/src/entities/: assets.rs  collection_items.rs  collections.rs  file.rs  file_assets.rs  file_keyframes.rs  file_probe.rs  file_segments.rs  file_subtitles.rs  files.rs  invites.rs  item_files.rs  item_metadata.rs  item_node_matches.rs  items.rs  jobs.rs  libraries.rs  library_user.rs  library_users.rs  media.rs  media_connection.rs  metadata.rs  metadata_source.rs  mod.rs  node_closure.rs  node_files.rs  node_match_status.rs  node_metadata.rs  node_metadata_cast.rs  node_metadata_content_ratings.rs  node_metadata_genres.rs  node_metadata_images.rs  node_metadata_recommendations.rs  nodes.rs  people.rs  prelude.rs  root_metadata.rs  root_node_cast.rs  root_node_matches.rs  roots.rs  (+8 more)
crates/lyra/src/graphql/: collection.rs  media.rs  mod.rs  mutation.rs  node.rs  properties.rs  query.rs  subscription.rs  types.rs
crates/lyra/src/graphql/dataloaders/: mod.rs  node_counts.rs  node_metadata.rs
crates/lyra/src/graphql/types/: asset.rs  file.rs  item.rs  mod.rs  node.rs  node_properties.rs  root.rs  season.rs  user.rs
crates/lyra/src/hls/: mod.rs  segmenter.rs
crates/lyra/src/hls/profiles/: audio.rs  subtitle.rs  video.rs
crates/lyra/src/import/: mod.rs  watch_state_import.rs
crates/lyra/src/jobs/: job.rs  manager.rs  mod.rs  on_demand.rs  registry.rs  semaphore.rs
crates/lyra/src/jobs/handlers/: asset_cleanup.rs  asset_download.rs  asset_thumbhash.rs  file_ffprobe.rs  file_keyframes.rs  file_probe.rs  file_subtitle_extract.rs  file_subtitle_process.rs  file_thumbnail.rs  file_timeline_preview.rs  mod.rs  root_intro_segments.rs  shared.rs
crates/lyra/src/matcher/: parser.rs  worker.rs
crates/lyra/src/media/: job_file_probe.rs  job_file_thumbnail.rs  job_file_timeline_preview.rs  mod.rs
crates/lyra/src/metadata/: job_item_batch.rs  job_root.rs  job_root_sync.rs  local.rs  matcher.rs  mod.rs  read.rs  remote.rs  shared.rs  store.rs  sync.rs  worker.rs
crates/lyra/src/profiles/: audio.rs  mod.rs  video.rs
crates/lyra/src/scanner/: derivation.rs  derive_nodes.rs  local.rs  mod.rs  node_generation.rs  reconcile.rs
crates/lyra/src/segment_markers/: job_root_intro_segments.rs  mod.rs  worker.rs
crates/lyra/src/subtitles/: files.rs  job_extract.rs  job_process.rs  language.rs  mod.rs
crates/lyra/src/tasks/: mod.rs  registry.rs
crates/lyra/src/tasks/tasks/: file_thumbnail.rs  file_timeline_preview.rs  mod.rs
migrations/: 20250710041951_init.sql  20250727171808_watch_states.sql  20250729230734_search.sql  20260210140439_init.sql  20260314113000_search_fts.sql  20260319120000_scanner_indexes.sql  20260319120500_job_priority_and_lock.sql  20260319170000_search_fts_rowid.sql  20260320133000_add_user_last_seen_at.sql  20260321120000_add_playback_preferences.sql  20260329120000_rebuild_jobs.sql  20260330100000_files_by_id_only.sql  20260330120000_metadata_sync_refactor.sql  20260331110000_nullable_file_analysis_payloads.sql  20260401120000_asset_kind.sql  20260402120000_node_metadata_aired_bounds.sql  20260402153000_add_collections.sql  20260403100000_node_and_library_availability.sql  20260406120000_file_probe_probe_blob.sql  20260406130000_drop_session_tokens.sql  20260406143000_add_nodes_last_fingerprint_version.sql  20260408120000_subtitle_assets.sql  20260409120000_invalidate_probe_cache_for_codec_metadata.sql  20260414120000_metadata_expansion.sql  20260424120000_subtitle_profile_refactor.sql
scripts/: reset-database.sh
src/: auth.rs  config.rs  ffmpeg.rs  ffprobe.rs  get_keyframes.rs  keyframes.rs  (+5 more)
(+313 files in other folders)
