[workspace]
members = [
    "crates/lyra",
    "crates/lyra-docker-init",
    "crates/lyra-metadata",
    "crates/lyra-metadata-tmdb",
    "crates/lyra-packager",
    "crates/lyra-parser",
    "crates/lyra-thumbnail",
    "crates/lyra-timeline-preview",
    "crates/lyra-marker",
    "crates/lyra-probe", "crates/lyra-bitsubconvert",
]
resolver = "3"
default-members = ["crates/lyra"]

[workspace.package]
version = "0.1.0"
edition = "2024"
