[workspace]
members = [
    "crates/lyra",
    "crates/lyra-ids",
    "crates/lyra-tracing",
    "crates/lyra-docker-init",
    "crates/lyra-metadata",
    "crates/lyra-metadata-tmdb",
    "crates/lyra-packager",
    "crates/lyra-parser",
    "crates/lyra-thumbnail",
    "crates/lyra-timeline-preview",
    "crates/lyra-marker",
    "crates/lyra-probe", "crates/lyra-bitsubconvert",
]
resolver = "3"
default-members = ["crates/lyra"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-graphql = "7.0"
async-graphql-axum = "7.0"
async-recursion = "1.1"
async-trait = "0.1"
argon2 = { version = "0.5", default-features = false }
axum = "0.8"
axum-extra = "0.10"
base64 = "0.22"
bitflags = "2.11"
chrono = "0.4"
config = "0.15"
cookie = "0.18"
ed25519-dalek = "2.1"
futures-util = "0.3"
glob = "0.3"
hex = "0.4"
hex-literal = "0.4"
icu_locale = "2.2"
image = { version = "0.25", default-features = false }
isolang = "2.4"
itertools = "0.14"
lazy_static = "1.5"
libc = "0.2"
ndarray = "0.17"
nix = "0.30"
notify = "8.1"
oar-ocr-core = "0.6"
once_cell = "1.21"
ort = { version = "2.0.0-rc.12", default-features = false }
postcard = "1.1"
rand = "0.9"
rand_core = "0.6"
ratelimit = "0.10"
rayon = "1.11"
regex = "1"
reqwest = "0.12"
rusty-chromaprint = "0.3"
sea-orm = "1.1"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.11"
sqlx = "0.8"
subtile = "0.4"
tar = "0.4"
tempfile = "3.26"
thiserror = "2"
thumbhash = "0.1"
tokenizers = { version = "0.22", default-features = false }
tokio = "1"
tokio-util = "0.7"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = "1.2"
uuid = "1"
zstd = "0.13"
