[package]
name = "lyra-bitsubconvert"
version.workspace = true
edition.workspace = true

[features]
default = []
dump-images = []

[dependencies]
anyhow = "1.0.102"
futures-util = "0.3.32"
hex = "0.4.3"
hex-literal = "0.4"
icu_locale = "2.2.0"
image = { version = "0.25", default-features = false, features = ["png", "rayon"] }
itertools = "0.14.0"
lyra-probe = { version = "0.1.0", path = "../lyra-probe" }
ndarray = "0.17.2"
oar-ocr-core = "0.6.2"
pgs-rs = "0.1.1"
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "download-binaries",
    "tls-rustls",
] }
rayon = "1.11.0"
reqwest = { version= "0.13", features=["stream"]}
sha2 = "0.11.0"
subtile = "0.4.1"
tempfile = "3.26.0"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde_json = "1.0.149"
