[package]
name = "lyra-bitsubconvert"
version.workspace = true
edition.workspace = true

[features]
default = []
dump-images = []

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
hex.workspace = true
hex-literal.workspace = true
icu_locale.workspace = true
image = { workspace = true, features = ["png", "rayon"] }
itertools.workspace = true
lyra-probe = { path = "../lyra-probe" }
ndarray.workspace = true
oar-ocr-core.workspace = true
pgs-rs.workspace = true
ort = { workspace = true, features = [
    "std",
    "download-binaries",
    "tls-rustls",
] }
rayon.workspace = true
reqwest = { workspace = true, features = ["stream"] }
sha2.workspace = true
subtile.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
