[package]
name = "lyra-keyframe-extractor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
lyra-ffprobe = { version = "0.1.0", path = "../lyra-ffprobe" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1.41"
