[package]
name = "lyra-marker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
lyra-ffprobe = { path = "../lyra-ffprobe" }
rusty-chromaprint = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
