[package]
name = "lyra-marker"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
lyra-probe = { path = "../lyra-probe" }
rusty-chromaprint.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
