[package]
name = "lyra-metadata-tmdb"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
lyra-metadata = { path = "../lyra-metadata" }
ratelimit = "0.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
