[package]
name = "lyra-packager"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lyra-packager"
path = "src/main.rs"
required-features = ["debug-http"]

[[bin]]
name = "dump-segments"
path = "src/bin/dump_segments.rs"

[features]
default = []
debug-http = ["dep:axum", "dep:tokio-util", "dep:tower-http"]

[dependencies]
axum = { version = "0.8", features = ["macros"], optional = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
libc = "0.2"
uuid = { version = "1.7.0", features = ["v4"] }
lyra-probe = { path = "../lyra-probe" }
isolang = "2.4"
