[package]
name = "lyra-packager"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lyra-packager"
path = "src/main.rs"
required-features = ["debug-http"]

[[bin]]
name = "dump-segments"
path = "src/bin/dump_segments.rs"

[features]
default = []
debug-http = ["dep:axum", "dep:tokio-util", "dep:tower-http"]

[dependencies]
axum = { workspace = true, features = ["macros"], optional = true }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"], optional = true }
tower-http = { workspace = true, features = ["cors"], optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
uuid = { workspace = true, features = ["v4"] }
lyra-probe = { path = "../lyra-probe" }
isolang.workspace = true
