[package]
name = "lyra-packager"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
lyra-tracing = { path = "../lyra-tracing" }
libc.workspace = true
lyra-ids = { path = "../lyra-ids" }
lyra-probe = { path = "../lyra-probe" }
isolang.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
