[package]
name = "lyra-parser"
version.workspace = true
edition.workspace = true

[dependencies]
lazy_static = "1.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "download-binaries",
    "tls-rustls",
] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
