[package]
name = "lyra-parser"
version.workspace = true
edition.workspace = true

[dependencies]
lazy_static.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
ort = { workspace = true, features = [
    "std",
    "download-binaries",
    "tls-rustls",
] }
tokenizers = { workspace = true, features = ["onig"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
