[package]
name = "lyra-probe"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
bitflags = { version = "2.11.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zstd = "0.13.3"
