[package]
name = "lyra-probe"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bitflags = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
lyra-tracing = { path = "../lyra-tracing" }
zstd.workspace = true
