[package]
name = "lyra-thumbnail"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lyra-thumbnail-debug"
path = "src/bin/lyra-thumbnail-debug.rs"

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["webp"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
