[package]
name = "lyra-thumbnail"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["webp"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
