[package]
name = "lyra-thumbnail"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
image = { workspace = true, features = ["webp"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
lyra-tracing = { path = "../lyra-tracing" }
