[package]
name = "lyra-timeline-preview"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
image = { workspace = true, features = ["png"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
lyra-tracing = { path = "../lyra-tracing" }
