[package]
name = "lyra"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = [
    "compression-gzip",
    "compression-zstd",
    "cors",
    "fs",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
nix = { version = "0.30.1", features = ["signal"] }
notify = "8.1.0"
libc = "0.2.174"
reqwest = { version = "0.12", features = ["stream", "json"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "macros",
    "sqlite",
    "migrate",
    "chrono",
] }
once_cell = "1.21.3"
config = { version = "0.15", features = ["yaml"] }
chrono = { version = "0.4", features = ["serde"] }
async-graphql = { version = "7.0.14", features = ["dataloader"] }
async-graphql-axum = "7.0.14"
image = { version = "0.24", features = ["jpeg"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4.3"
tokio-util = "0.7.15"
futures-util = "0.3.31"
thumbhash = "0.1.0"
rand = "0.9.1"
tempfile = "3.20.0"
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
    "debug-print",
    "sqlite-use-returning-for-3_35",
] }
bitflags = "2.9.1"
argon2 = { version = "^0.5.3", default-features = false, features = [
    "alloc",
    "password-hash",
    "rand",
    "std",
] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
ulid = "1.2.1"
cookie = "0.18.1"
regex = "1.11.1"
lazy_static = "1.5.0"
glob = "0.3.3"
lyra-packager = { path = "../lyra-packager", default-features = false }
isolang = "2.4"
lyra-metadata = { path = "../lyra-metadata" }
lyra-metadata-tmdb = { path = "../lyra-metadata-tmdb" }
lyra-parser = { path = "../lyra-parser" }
lyra-probe = { path = "../lyra-probe" }
lyra-thumbnail = { path = "../lyra-thumbnail" }
lyra-timeline-preview = { path = "../lyra-timeline-preview" }
lyra-marker = { path = "../lyra-marker" }
async-recursion = "1.1.1"
async-trait = "0.1.89"
zstd = "0.13.3"
rusty-chromaprint = "0.3.0"

[features]
static = []

[build-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
