[package]
name = "lyra"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = [
    "compression-gzip",
    "compression-zstd",
    "cors",
    "fs",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
lyra-tracing = { path = "../lyra-tracing" }
nix = { workspace = true, features = ["signal"] }
notify.workspace = true
libc.workspace = true
reqwest = { workspace = true, features = ["stream", "json"] }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "macros",
    "sqlite",
    "migrate",
    "chrono",
] }
once_cell.workspace = true
config = { workspace = true, features = ["yaml"] }
chrono = { workspace = true, features = ["serde"] }
async-graphql = { workspace = true, features = ["dataloader"] }
async-graphql-axum.workspace = true
image = { workspace = true, features = ["jpeg", "png", "webp"] }
sha2.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
hex.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
thumbhash.workspace = true
rand.workspace = true
rand_core.workspace = true
tempfile.workspace = true
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
    "debug-print",
    "sqlite-use-returning-for-3_35",
] }
bitflags.workspace = true
argon2 = { workspace = true, features = [
    "alloc",
    "password-hash",
    "rand",
    "std",
] }
axum-extra = { workspace = true, features = ["cookie"] }
ulid.workspace = true
cookie.workspace = true
regex.workspace = true
lazy_static.workspace = true
glob.workspace = true
lyra-packager = { path = "../lyra-packager", default-features = false }
isolang.workspace = true
lyra-metadata = { path = "../lyra-metadata" }
lyra-metadata-tmdb = { path = "../lyra-metadata-tmdb" }
lyra-parser = { path = "../lyra-parser" }
lyra-probe = { path = "../lyra-probe" }
lyra-thumbnail = { path = "../lyra-thumbnail" }
lyra-timeline-preview = { path = "../lyra-timeline-preview" }
lyra-marker = { path = "../lyra-marker" }
lyra-bitsubconvert = { path = "../lyra-bitsubconvert" }
async-recursion.workspace = true
async-trait.workspace = true
zstd.workspace = true
rusty-chromaprint.workspace = true
postcard = { workspace = true, features = ["use-std"] }
tar.workspace = true

[features]
static = []

[build-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
